objects/AcctSeed__GL_Account_Default__c/AcctSeed__GL_Account_Default__c.object-meta.xml
<CustomObject>
    <label>GL Account Default</label>
    <nameField>
        <displayFormat>GLAD-{00000}</displayFormat>
        <label>GL Account Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Account Defaults</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>