objects/AcctSeed__GL_Account_Default__c/fields/AcctSeed__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GL Account</label>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>GL Account Defaults</relationshipLabel>
    <relationshipName>GL_Acct_Defaults</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>