objects/AcctSeed__GL_Account_Default__c/fields/AcctSeed__GL_Account_Specification__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__GL_Account_Specification__c</fullName>
    <externalId>true</externalId>
    <label>GL Account Specification</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>