objects/AcctSeed__GL_Account_Default__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>GL Account Defaults</relationshipLabel>
    <relationshipName>GL_Acct_Defaults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>