objects/AcctSeed__GL_Account_Default__c/fields/AcctSeed__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>